<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.IntroActivity">


    <ImageView
        android:id="@+id/image_Intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_background_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_TileIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicamix"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_Intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_Intro"
        app:layout_constraintTop_toTopOf="@+id/image_Intro" />


    <TextView
        android:id="@+id/text_intro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/descubra_uma_nova_experi_ncia_musical_com_o_musicamix_explore_playlists_exclusivas_encontre_suas_faixas_favoritas_e_crie_sua_pr_pria_trilha_sonora"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_TileIntro" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Inscrevase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/fundo_gradiente"
        android:text="@string/insceva_se"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_intro" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Entrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/fundo_gradiente_transparente"
        android:text="@string/entrar"
        android:textColor="@color/orangered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_Inscrevase" />


</androidx.constraintlayout.widget.ConstraintLayout>