<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.LoginActivity">




    <ImageView
        android:id="@+id/img_Login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_background_home"
        android:scaleType="centerCrop"/>


    <ImageView
        android:id="@+id/botaoVoltarTelaDeIntro"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:src="@drawable/ico_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_title_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicamix"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="46sp"
        android:textAlignment="center"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:hint="Email"
        android:inputType="textEmailAddress"

        android:background="@drawable/fundo_gradiente_transparente"
        android:drawableEnd="@drawable/ico_mail"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_title_Login"
        app:layout_constraintEnd_toEndOf="@id/text_title_Login"
        app:layout_constraintStart_toStartOf="@id/text_title_Login"/>

    <EditText
        android:id="@+id/ed_Senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:hint="Senha"
        android:inputType="textPassword"

        android:background="@drawable/fundo_gradiente_transparente"
        android:drawableEnd="@drawable/ico_eye"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/edEmail"
        app:layout_constraintEnd_toEndOf="@id/edEmail"
        app:layout_constraintStart_toStartOf="@id/edEmail"/>
    <TextView
        android:id="@+id/text_caracters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deve_ter_pelomenos_8_caracteres"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/ed_Senha"
        app:layout_constraintStart_toStartOf="@id/ed_Senha"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoEntrarTelaDeshBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Entrar"
        android:background="@drawable/fundo_gradiente"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"


        app:layout_constraintTop_toBottomOf="@id/text_caracters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <View
        android:id="@+id/viewStart1"
        android:layout_width="130dp"
        android:layout_height="1dp"

        android:layout_marginTop="32dp"
        android:background="@color/white"


        app:layout_constraintTop_toBottomOf="@id/botaoEntrarTelaDeshBoard"
        app:layout_constraintStart_toStartOf="@id/botaoEntrarTelaDeshBoard"/>

    <TextView
        android:id="@+id/text_ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ou"
        android:textColor="@color/white"

        android:textSize="24sp"
        android:textStyle="bold"


        app:layout_constraintBottom_toBottomOf="@id/viewStart1"
        app:layout_constraintEnd_toStartOf="@id/viewEnd1"
        app:layout_constraintStart_toEndOf="@+id/viewStart1"
        app:layout_constraintTop_toTopOf="@id/viewStart1" />

    <View
        android:id="@+id/viewEnd1"
        android:layout_width="130dp"
        android:layout_height="1dp"

        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_ou"
        app:layout_constraintStart_toEndOf="@+id/text_ou"
        app:layout_constraintTop_toTopOf="@+id/text_ou"
        app:layout_constraintEnd_toEndOf="@id/botaoEntrarTelaDeshBoard"/>

    <TextView
        android:id="@+id/e_Com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar_com"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        app:layout_constraintTop_toBottomOf="@id/text_ou"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/Li_pai_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/e_Com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:id="@+id/linear_ico3"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/fundo_gradiente"
            android:orientation="vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_face"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_ico4"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/fundo_gradiente"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_gmail"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"/>

        </LinearLayout>

    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>